[gd_scene load_steps=2 format=2]

[ext_resource path="res://Menu/ColourSelector/ColourSelection.gd" type="Script" id=1]

[node name="ColourSelection" type="Control"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 1 )

[node name="ColourLabel" type="Label" parent="."]
margin_left = 8.0
margin_top = 176.0
margin_right = 135.0
margin_bottom = 190.0
text = "Choose your colour:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SelectRight" type="Button" parent="."]
margin_left = 96.0
margin_top = 200.0
margin_right = 108.0
margin_bottom = 220.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DisplayColour" type="Panel" parent="."]
modulate = Color( 0.262745, 0.109804, 0.109804, 1 )
margin_left = 56.0
margin_top = 192.0
margin_right = 88.0
margin_bottom = 232.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SelectLeft" type="Button" parent="."]
margin_left = 32.0
margin_top = 200.0
margin_right = 44.0
margin_bottom = 220.0
[connection signal="pressed" from="SelectRight" to="." method="_on_SelectRight_pressed"]
[connection signal="pressed" from="SelectLeft" to="." method="_on_SelectLeft_pressed"]
